app/css/app.css
/* ... */
.overlay-enter, .overlay-enter-active, .overlay-leave, .overlay-enter .rfz-view.no-menu, .overlay-enter-active .rfz-view.no-menu, .overlay-leave .rfz-view.no-menu {
    -webkit-transition:-webkit-transform 0.3s ease-in-out;
    transition: -webkit-transform 0.3s ease-in-out;
}

.overlay-enter .rfz-view.no-menu, .overlay-leave .rfz-view.no-menu {
    -webkit-transform: translateY(100%);

}

.overlay-enter.overlay-enter-active .rfz-view.no-menu {
    -webkit-transform: translateY(0);
}

.header {
    position:absolute;
    top:0;
    left:0;
    right:0;
    height:44px;
    background:url("../ios-images/navbar_bg@2x.png") right no-repeat, #2D5081;
    box-shadow:0 0 3px 0 rgba(0,0,0,0.5);
    background-size:480px 88px;
    z-index:100;
    text-align:center;
    font-size:20px;
    font-weight:bold;
    color:#fff;
    text-shadow:0 -1px 0 rgba(0,0,0,0.8);
    -webkit-transition:opacity 0.3s;
}

.header-content {
    position:absolute;
    top:0;
    left:0;
    right:0;
    bottom:0;
    background:url("../ios-images/navbar_bg@2x.png") right no-repeat, #2D5081;
    background-size:480px 88px;
    opacity:1;
    -webkit-transition:opacity 0.3s;
}

.header-content.main {
    z-index:100;
}

.header .header-name {
    position:absolute;
    top:0;
    left:0;
    right:0;
    bottom:0;
    z-index:0;
    padding-top:11px;
    -webkit-transition:-webkit-transform 0.3s, opacity 0.3s;
}

.header-button, .header-button:before, .header-button:after {
    background:url("../img/nav-btn-sprite.png") 0 0;
    background-size:13px 180px;
}

.header-button {
    z-index:1;
    padding:8px 6px;
    position:relative;
    min-width:32px;
    margin:7px 11px 0 11px;
    height:14px;
    font-size:12px;
    font-weight:bold;
    text-shadow:0 -1px 0 #000;
}

.header-button:after {
    content:'';
    width:6px;
    height:30px;
    position:absolute;
    right:-6px;
    top:0;
    background-position:0 -120px;
}

.header-button:before {
    content:'';
    width:6px;
    height:30px;
    position:absolute;
    left:-6px;
    top:0;
    background-position:-7px -120px;
}

.header-button.back {
    padding-left:0;
    margin-left:18px;
}

.header-button.back:before {
    width:13px;
    left:-13px;
    background-position:0 -60px;
}

.header-button.touch-start {
    background-position-y:-30px;
} 

.header-button.touch-start:after {
    background-position-y:-150px;
}

.header-button.touch-start:before {
    background-position-y:-150px;
}

.header-button.back.touch-start:before {
    background-position-y:-90px;
}


.header-refresh {
/*    background-image:url("../ios-images/navbar_button_settings_off@2x.png");*/
}

.header-settings span:after {
    font-family:FontAwesome;
    content:"\f013";
    font-size:18px;
    position:relative;
    top:-2px;
    font-weight:normal;
    -webkit-font-smoothing: antialiased;
}

.view {
    position:absolute;
    top:44px;
    bottom:0;
    left:0;
    right:0;
/*    background:url("../img/ios-bg.png") 0 -64px;*/
    background-size:100%;
    overflow-y: auto;
/*    overflow-x:hidden;*/
    -webkit-overflow-scrolling: touch;
    -webkit-transform: translateZ(0);
}

#overlay-view .view {
    bottom:0px;
}

.subview {
    -webkit-transform: translateZ(0);
    height:100%;
    overflow-y:auto;
}

.scrollarea {
    overflow:auto;
/*    overflow-y:auto;
    overflow-x:hidden;*/
    min-height:100%;
    position:relative;
    padding-bottom:1px;
    -webkit-transform: translateZ(0);
}

#menu {
    position:absolute;
    bottom:0;
    left:0;
    right:0;
    height:49px;
}

#menu li {
    color:#929BA2;
    font-size:10px;
    font-weight:bold;
    text-align:center;
    float:left;
    width:25%;
    height:49px;
    text-shadow:0 1px 0 #000000;
    background:url("../ios-images/tabs_bg_off@2x.png") no-repeat;
    background-size:100%;
}

#menu li.selected {
    color:#ffffff;
    background:url("../ios-images/tabs_bg_on@2x.png") no-repeat;
}

#menu li span {
    display:block;
    height:15px;
    padding-top:34px;
    background-repeat:no-repeat;
    background-position:center 5px;
}

.menu-overview span {
    background-size:26px 29px;
    background-image:url('../ios-images/tabs_overview_icon_off@2x.png')
}
.menu-overview.selected span {
    background-image:url('../ios-images/tabs_overview_icon_on@2x.png')
}

.menu-progress span {
    background-size:33px 25px;
    background-image:url('../ios-images/tabs_progress_icon_off@2x.png')
}
.menu-progress.selected span {
    background-image:url('../ios-images/tabs_progress_icon_on@2x.png')
}

.menu-payments span {
    background-size:30px 25px;
    background-image:url('../ios-images/tabs_payments_icon_off@2x.png')
}
.menu-payments.selected span {
    background-image:url('../ios-images/tabs_payments_icon_on@2x.png')
}

.menu-accounts span {
    background-size:25px 29px;
    background-image:url('../ios-images/tabs_accounts_icon_off@2x.png')
}
.menu-accounts.selected span {
    background-image:url('../ios-images/tabs_accounts_icon_on@2x.png')
}

.pane.transparent {
    background:rgba(255,255,255,0.4);
}

.pane-header {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color:#001331;
    font-size:16px;
    font-weight:bold;
    padding-bottom:6px;
    line-height:16px;
}

.pane {
    position:relative;
    margin:10px 8px;
    padding:11px;
    border-radius:1px;
    box-shadow:0 1px 3px 0 #c0c5cc;
}

.left {
    float:left;
}

.right {
    float:right;
}

.pane-text {
    margin-top:3px;
}

.float-overflow {
    overflow:auto;
}

.text-right {
    text-align:right;
}

.text-small {
    color:#9b9594;
    font-size:11px !important;
    line-height:14px !important;
    font-weight:bold;
}

.text-medium {
    color:#9b9594;
    font-size:12px !important;
    line-height:15px !important;
    font-weight:bold;
}

.text-large {
    padding-top:3px;
    line-height:30px;
    font-size:24px;
    font-weight:bold;
}
/* ... */

